--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
         id: snake-gif
   
         with:
-          github_user_name: bluthra999
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          github_user_name: bluthra999 
+          svg_out_path: dist/github-snake-dark.svg?palette=github-dark
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
